// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is disabled 1`] = `
<label
  className="MuiFormControlLabel-root Mui-disabled"
>
  <span
    aria-disabled={true}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root svg MuiCheckbox-colorPrimary checkbox  PrivateSwitchBase-disabled-15 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={false}
        className="PrivateSwitchBase-input-16"
        data-indeterminate={false}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label label Mui-disabled MuiTypography-body1"
  />
</label>
`;

exports[`renders correctly props object 1`] = `
<label
  className="MuiFormControlLabel-root test class MuiFormControlLabel-labelPlacementTop"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root svg MuiCheckbox-colorPrimary checkbox  PrivateSwitchBase-checked-14 Mui-checked MuiIconButton-colorPrimary"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={true}
        className="PrivateSwitchBase-input-16"
        data-indeterminate={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="test value"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label label MuiTypography-body1"
  >
    test
  </span>
</label>
`;
